maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: '=' expected but ',' found.
def trouve_baggle():Int,Int = {
                       ^JediEscaper:14: error: illegal start of simple expression
def marquer() {
^